--- a/microphone/Base.lproj/Main.storyboard
+++ b/microphone/Base.lproj/Main.storyboard
@@ -13,53 +13,112 @@
                         <viewControllerLayoutGuide type="bottom" id="zoI-9k-XaT"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xPw-ZQ-3U1">
-                                <rect key="frame" x="0.0" y="524" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                                <items>
-                                    <barButtonItem image="9.png" id="pvd-Cz-MM0">
-                                        <connections>
-                                            <action selector="controlRecord:" destination="vXZ-lx-hvc" id="n4Q-p4-iOn"/>
-                                        </connections>
-                                    </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="VST-86-qQr"/>
-                                    <barButtonItem systemItem="play" id="0AB-Jo-WPx">
-                                        <connections>
-                                            <action selector="controlPlay:" destination="vXZ-lx-hvc" id="AWo-KZ-UXp"/>
-                                        </connections>
-                                    </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="551-gc-nyd"/>
-                                    <barButtonItem image="3.png" id="IQI-Om-TSL">
-                                        <connections>
-                                            <action selector="controlStop:" destination="vXZ-lx-hvc" id="MBd-QR-wZi"/>
-                                        </connections>
-                                    </barButtonItem>
-                                </items>
-                            </toolbar>
-                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" fixedFrame="YES" progressViewStyle="bar" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="RpI-F2-QnV">
-                                <rect key="frame" x="25" y="484" width="275" height="3"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KvI-IC-SZz">
+                                <rect key="frame" x="18" y="18" width="64" height="64"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </progressView>
+                                <state key="normal" image="buttonPlay.png">
+                                    <color key="titleShadowColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                            </button>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="GwO-i5-PXR">
+                                <rect key="frame" x="51" y="34" width="51" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="switchEditing:" destination="vXZ-lx-hvc" eventType="valueChanged" id="8u6-g8-Xiu"/>
+                                </connections>
+                            </switch>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="GwO-i5-PXR" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="51" id="1qM-Eb-XbX"/>
+                            <constraint firstAttribute="centerX" secondItem="KvI-IC-SZz" secondAttribute="centerX" id="2XC-rK-ooV"/>
+                            <constraint firstItem="GwO-i5-PXR" firstAttribute="top" secondItem="m7W-2h-jhD" secondAttribute="bottom" constant="14" id="frg-6Y-gPl"/>
+                            <constraint firstAttribute="centerY" secondItem="KvI-IC-SZz" secondAttribute="centerY" id="vXi-nM-lc0"/>
+                        </constraints>
                     </view>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="100" height="100"/>
                     <connections>
-                        <outlet property="controlPlay" destination="0AB-Jo-WPx" id="ZkS-7z-Dd5"/>
-                        <outlet property="controlRecord" destination="pvd-Cz-MM0" id="uII-ej-3Ft"/>
-                        <outlet property="controlStop" destination="IQI-Om-TSL" id="S2c-Hr-cNh"/>
-                        <outlet property="progressView" destination="RpI-F2-QnV" id="SKZ-W2-hb8"/>
+                        <outlet property="button" destination="KvI-IC-SZz" id="Q1x-fr-4SM"/>
+                        <outlet property="switchControl" destination="GwO-i5-PXR" id="Pm2-HW-wB3"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
+        <!--MicrophoneUI-->
+        <scene sceneID="Ifk-lc-gi6">
+            <objects>
+                <viewController storyboardIdentifier="microphone" id="xcZ-Lv-ray" customClass="MIMicrophoneUI" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="OVx-sE-Ko7"/>
+                        <viewControllerLayoutGuide type="bottom" id="Act-4P-fGW"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="EYJ-Gp-PPN">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Speak now" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B60-Hp-7hC">
+                                <rect key="frame" x="111" y="152" width="99" height="24"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="htC-vc-2T2">
+                                <rect key="frame" x="60" y="184" width="200" height="200"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="lPp-De-jKR"/>
+                                    <constraint firstAttribute="width" constant="200" id="vNC-Vu-PQz"/>
+                                </constraints>
+                            </view>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="microphone128.png" translatesAutoresizingMaskIntoConstraints="NO" id="wb3-bE-ah9">
+                                <rect key="frame" x="60" y="184" width="200" height="200"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="5Bg-nV-dYn"/>
+                                    <constraint firstAttribute="height" constant="200" id="Mkc-We-TYq"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vxF-ss-M0q">
+                                <rect key="frame" x="136" y="392" width="48" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Cancel"/>
+                                <connections>
+                                    <action selector="controlCancel:" destination="xcZ-Lv-ray" eventType="touchUpInside" id="ztH-1C-GmR"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerX" secondItem="B60-Hp-7hC" secondAttribute="centerX" id="AVW-Jn-QZZ"/>
+                            <constraint firstItem="vxF-ss-M0q" firstAttribute="top" secondItem="wb3-bE-ah9" secondAttribute="bottom" constant="8" id="BZq-Gg-AB1"/>
+                            <constraint firstAttribute="centerX" secondItem="htC-vc-2T2" secondAttribute="centerX" id="Q4v-Lf-gOR"/>
+                            <constraint firstAttribute="centerY" secondItem="htC-vc-2T2" secondAttribute="centerY" id="gul-eb-GIH"/>
+                            <constraint firstAttribute="centerY" secondItem="wb3-bE-ah9" secondAttribute="centerY" id="hkQ-wj-cEh"/>
+                            <constraint firstItem="wb3-bE-ah9" firstAttribute="top" secondItem="B60-Hp-7hC" secondAttribute="bottom" constant="8" id="kbF-SJ-AgT"/>
+                            <constraint firstAttribute="centerX" secondItem="vxF-ss-M0q" secondAttribute="centerX" id="nRK-mm-8pq"/>
+                            <constraint firstAttribute="centerX" secondItem="wb3-bE-ah9" secondAttribute="centerX" id="uxg-zO-aho"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="viewBackgroundColor" destination="htC-vc-2T2" id="q62-cP-FTk"/>
+                        <outlet property="viewMicrophoneImage" destination="wb3-bE-ah9" id="Esu-C8-Bnh"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hCM-pP-c95" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1234" y="283"/>
+        </scene>
     </scenes>
     <resources>
-        <image name="3.png" width="32" height="32"/>
-        <image name="9.png" width="32" height="32"/>
+        <image name="buttonPlay.png" width="64" height="64"/>
+        <image name="microphone128.png" width="128" height="128"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
